--- a/local/ansible/roles/vagrant/tasks/run-vagrant.yaml
+++ b/local/ansible/roles/vagrant/tasks/run-vagrant.yaml
@@ -4,18 +4,46 @@
     dest: "{{ base_path }}"
   tags: sync
 
+- name: Copy public SSH key to the server
+  copy:
+    src: "~/.ssh/id_rsa.pub"
+    dest: "{{ base_path }}/vagrant"
+
 - name:  Destroy previous Vagrant instances
   environment:
-    NUM_OF_VMS: 2
+    NUM_OF_VMS: "{{ num_of_vms }}"
+    BASE_PATH: "{{ base_path }}"
+    SUBNET: "{{ subnet }}"
+    DISK_SIZE: "{{ disk_size }}"
+    BASE_IP: "{{ base_ip }}"
   become: yes
   command:
     chdir: "{{ base_path }}/vagrant/"
     cmd: "vagrant destroy -f"
   tags: destroy
 
+- name: Find old .vdi files
+  find:
+    paths:
+      - "{{ base_path }}/vagrant"
+    patterns: "*.vdi"
+  register: find_results
+  tags: destroy
+
+- name: Remove old .vdi files
+  file:
+    path: "{{ item['path'] }}"
+    state: absent
+  with_items: "{{ find_results['files'] }}"
+  tags: destroy
+
 - name:  Vagrant up
-  # environment:
-  #   NUM_OF_VMS: 2
+  environment:
+    NUM_OF_VMS: "{{ num_of_vms }}"
+    BASE_PATH: "{{ base_path }}"
+    SUBNET: "{{ subnet }}"
+    DISK_SIZE: "{{ disk_size }}"
+    BASE_IP: "{{ base_ip }}"
   become: yes
   command:
     chdir: "{{ base_path }}/vagrant/"
