Add DEFAULT_GAS_PRICE_WEI .env parameter generation

--- a/ansible/roles/sources/tasks/main.yaml
+++ b/ansible/roles/sources/tasks/main.yaml
@@ -72,3 +72,4 @@
     - { name: TG_API_KEY, value: "{{ tg_api_key }}"}
     - { name: TG_CHAT_ID, value: "{{ tg_chat_id }}"}
     - { name: MONITORING_CONTAINERS, value: "{{ monitoring_containers }}"}
+    - { name: DEFAULT_GAS_PRICE_WEI, value: "{{ default_gas_price_wei }}"}
