--- a/bare-metal/vagrant/Vagrantfile
+++ b/bare-metal/vagrant/Vagrantfile
@@ -15,6 +15,8 @@ PUB_KEY_PATH = "#{BASE_PATH}/vagrant/id_rsa.pub"
 SUBNET = ENV['SUBNET'] # ex: "192.168.2"
 NUM_OF_VMS = number_or_nil(ENV['NUM_OF_VMS'])
 DISK_SIZE = number_or_nil(ENV['DISK_SIZE'])
+RAM_SIZE = number_or_nil(ENV['RAM_SIZE'])
+VM_BASE_NAME = ENV['VM_BASE_NAME']
 BASE_IP = number_or_nil(ENV['BASE_IP'])
 
 
@@ -48,7 +50,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
             end
             file_for_disk = "./large_disk#{i}.vdi"
             node.vm.provider "virtualbox" do |v|
-               unless File.exist?(file_for_disk)
+              v.customize ["modifyvm", :id, "--memory", RAM_SIZE]
+              v.name = "#{VM_BASE_NAME}-#{i}"
+              unless File.exist?(file_for_disk)
                    v.customize ['createhd', 
                                 '--filename', file_for_disk, 
                                 '--size', DISK_SIZE * 1024]
