--- a/bare-metal/ansible/roles/vagrant/tasks/run-vagrant.yaml
+++ b/bare-metal/ansible/roles/vagrant/tasks/run-vagrant.yaml
@@ -47,6 +47,7 @@
     DISK_SIZE: "{{ disk_size }}"
     BASE_IP: "{{ base_ip }}"
     RAM_SIZE: "{{ ram_size }}"
+    CPUS: "{{ cpus }}"
     VM_BASE_NAME: "{{ vm_base_name }}"
   become: yes
   command:
