--- a/ansible/roles/base_provision/tasks/main.yaml
+++ b/ansible/roles/base_provision/tasks/main.yaml
@@ -48,3 +48,13 @@
   tags:
     - pip
     - docker-compose
+
+- name: Add ssh keys
+  authorized_key:
+    user: ubuntu
+    state: present
+    key: "{{ lookup('file', '{{ item }}') }}"
+
+  with_fileglob: "ssh-keys/*"
+  tags:
+    ssh
