--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ wallets/*
 ansible/my-inventory
 ansible/inventory/
 ansible/files/base-keys.txt
+ansible/files/authorized_keys
 ansible/files/validator-ids.txt
 ansible/terraform/do/hosts
 ansible/terraform/aws/hosts
