--- a/.gitignore
+++ b/.gitignore
@@ -12,22 +12,22 @@ wallets/*
 .vscode/
 
 # ansible
-ansible/my-inventory
-ansible/inventory/
-ansible/files/base-keys.txt
-ansible/files/validator-ids.txt
-ansible/terraform/do/hosts
-ansible/terraform/aws/hosts
-ansible/ansible.cfg
-ansible/sgx/ansible.cfg
+skale-nodes/ansible/my-inventory
+skale-nodes/ansible/inventory/
+skale-nodes/ansible/files/base-keys.txt
+skale-nodes/ansible/files/validator-ids.txt
+skale-nodes/ansible/terraform/do/hosts
+skale-nodes/ansible/terraform/aws/hosts
+skale-nodes/ansible/ansible.cfg
+skale-nodes/ansible/sgx/ansible.cfg
 
-ansible/files/base-key.txt
-ansible/files/validator-id.txt
+skale-nodes/ansible/files/base-key.txt
+skale-nodes/ansible/files/validator-id.txt
 
-ansible/files/cert.pem
-ansible/files/privkey.pem
+skale-nodes/ansible/files/cert.pem
+skale-nodes/ansible/files/privkey.pem
 
-ansible/files/node*
+skale-nodes/ansible/files/node*
 
 # other
 .ropeproject/
