--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ ansible/files/base-keys.txt
 ansible/files/authorized_keys
 ansible/files/validator-ids.txt
 ansible/terraform/do/hosts
-ansible/terraform/aws/hosts
+ansible/terraform/aws/hosts*
 ansible/ansible.cfg
 ansible/sgx/ansible.cfg
 
@@ -43,5 +43,5 @@ manager.json
 # bare metal setup
 
 bare-metal/ansible/inventory/*
-bare-metal/ansible/hosts
+bare-metal/ansible/hosts*
 bare-metal/ansible/ansible.cfg
