Add iptables persistent installation

--- a/skale-nodes/ansible/roles/base_provision/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/base_provision/tasks/main.yaml
@@ -25,7 +25,18 @@
 
 - name: Install packages
   apt: name={{ item }} update_cache=yes state=latest
-  loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools', 'python3-dev']
+  loop: [
+    "apt-transport-https",
+    "ca-certificates",
+    "curl",
+    "software-properties-common",
+    "python3-pip",
+    "virtualenv",
+    "python3-setuptools",
+    "python3-dev",
+    "iptables-persistent"
+    ]
+  tags: apt
 
 - name: Update pip
   pip:
