--- a/skale-nodes/ansible/roles/update/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/update/tasks/main.yaml
@@ -1,3 +1,11 @@
-- import_tasks: config.yaml
-- import_tasks: resource_allocation.yaml
-- import_tasks: skale_update.yaml
+- name: Update configs
+  import_tasks: config.yaml
+  when: env is defined and env == "dev"
+
+- name: Update resource_allocation
+  import_tasks: resource_allocation.yaml
+  when: env is defined and env == "dev"
+
+
+- name: Skale node update
+  import_tasks: skale_update.yaml
