--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ bare-metal/ansible/inventory/*
 bare-metal/ansible/hosts*
 bare-metal/ansible/ansible.cfg
 bare-metal/ansible/files/restart_vm*
+bare-metal/ansible/conf*
