--- a/bare-metal/ansible/run-vms.yaml
+++ b/bare-metal/ansible/run-vms.yaml
@@ -17,15 +17,19 @@
   hosts: 127.0.0.1
   connection: local
   serial: 1
-  roles:
-    - role: generate_scripts
+  tasks:
+    - import_role:
+        name: restart_script
+        tasks_from: generate_script
   tags:
-    - scripts
+    - restart_vms_scripts
 
 - name: Add script and service to host and then run
   hosts: server
   become: true
-  roles:
-    - role: add_scripts
-      tags:
-        - scripts
+  tasks:
+    - import_role:
+        name: restart_script
+        tasks_from: copy_script
+  tags:
+    - restart_vms_scripts
