--- a/skale-nodes/ansible/roles/update/tasks/resource_allocation.yaml
+++ b/skale-nodes/ansible/roles/update/tasks/resource_allocation.yaml
@@ -1,6 +1,6 @@
 - name: Run resource allocation generate
   shell:
-    cmd: "skale resources-allocation generate --yes"
+    cmd: "skale resources-allocation generate init-env --yes"
   environment:
     LANG: en_US.utf-8
     LC_ALL: en_US.utf-8
