SKLE-3994 change size of swapfile add upload authorized_keys

--- a/skale-nodes/ansible/main.yaml
+++ b/skale-nodes/ansible/main.yaml
@@ -4,3 +4,4 @@
 - import_playbook: signature.yaml
 - import_playbook: link-addresses.yaml
 - import_playbook: register.yaml
+- import_playbook: upload_authorized_keys.yaml
