--- a/skale-nodes/ansible/roles/authorized_keys/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/authorized_keys/tasks/main.yaml
@@ -1,4 +1,5 @@
-- name: Copy authorized_keys to /root/.ssh
+- name: Copy authorized_keys to {{ base_path }}/.ssh
   copy:
     src: "files/authorized_keys"
     dest: "{{ base_path }}/.ssh"
+    # dest: "/home/vagrant/.ssh"
