SKALE-3996 Add disable IMA

--- a/skale-nodes/ansible/roles/sources/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/sources/tasks/main.yaml
@@ -74,3 +74,4 @@
     - { name: MONITORING_CONTAINERS, value: "{{ monitoring_containers }}"}
     - { name: DEFAULT_GAS_PRICE_WEI, value: "{{ default_gas_price_wei }}"}
     - { name: ENV_TYPE, value: "{{ env_type }}"}
+    - { name: DISABLE_IMA, value: "{{ disable_ima }}"}
