SKALE-3996 Save state to file, split IMA and SM deployment

--- a/skale-nodes/ansible/main.yaml
+++ b/skale-nodes/ansible/main.yaml
@@ -1,3 +1,4 @@
+- import_playbook: deploy_contracts.yaml
 - import_playbook: base.yaml
 - import_playbook: setup.yaml
 - import_playbook: validator.yaml
