--- a/skale-nodes/ansible/roles/deploy_contracts/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/deploy_contracts/tasks/main.yaml
@@ -1,41 +1,2 @@
-- name: Deploy contracts (this may take a while, logs - {{ playbook_dir }}/logs/sm-deploy.log)
-  shell: bash {{ playbook_dir }}/../../helper-scripts/deploy_manager.sh 2>&1 | tee {{ playbook_dir }}/logs/sm-deploy.log
-  run_once: yes
-  environment:
-    MANAGER_TAG: "{{ manager_tag }}"
-    ETH_PRIVATE_KEY: "{{ eth_private_key }}"
-    ENDPOINT: "{{ endpoint }}"
-    GAS_PRICE: "{{ deploy_gas_price }}"
-    NETWORK: "custom"
-  tags:
-    - deploy_sm
-    - deploy_contracts
-- name: Generate random string
-  set_fact:
-    random_str: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=15') }}"
-  tags:
-    - upload_contracts
-- name: Upload SM ABI to S3
-  aws_s3:
-    aws_access_key: "{{ aws_key }}"
-    aws_secret_key: "{{ aws_secret }}"
-    bucket: "skale-abis"
-    src: "{{ playbook_dir }}/../../helper-scripts/contracts_data/manager.json"
-    object: 'skale-manager-abi-{{ manager_tag }}-{{ random_str }}.json'
-    region: 'eu-central-1'
-    mode: put
-    permission: "public-read"
-  tags:
-    - upload_contracts
-  register: url_output
-- name: Format download URL
-  shell:  echo "{{ url_output.url }}" | cut -f1 -d"?"
-  register: sm_url
-  tags:
-    - upload_contracts
-- name: Show ABIs download URL
-  debug:
-   msg: >-
-      ABIs download URL: {{ sm_url.stdout }}
-  tags:
-    - upload_contracts
+- import_tasks: manager.yaml
+- import_tasks: ima.yaml
