--- a/skale-nodes/ansible/roles/sources/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/sources/tasks/main.yaml
@@ -1,3 +1,13 @@
+- name: Set SM download URL
+  set_fact:
+    manager_contracts: "{{ sm_url }}"
+  when: manager_contracts is undefined
+
+- name: Crash if no SM ABIs URL provided
+  fail: 
+    msg: manager_contracts is undefined
+  when: manager_contracts is undefined
+
 - name: Download contracts from digitalocean
   get_url:
     url: "{{ manager_contracts }}"
