SKALE-4222 Add watchdog sync

--- a/skale-nodes/ansible/roles/base_provision/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/base_provision/tasks/main.yaml
@@ -69,3 +69,7 @@
   with_fileglob: "ssh-keys/*"
   tags:
     ssh
+
+- name: Sync time on host
+  shell: sudo timedatectl set-ntp on
+  become: true
