--- a/skale-nodes/ansible/roles/link_addresses/tasks/transfer_funds.yaml
+++ b/skale-nodes/ansible/roles/link_addresses/tasks/transfer_funds.yaml
@@ -1,4 +1,4 @@
-- name: Transfer funds to validator
+- name: Transfer funds to node wallets
   run_once: yes
   script: transfer_funds.py
   environment:
