--- a/skale-nodes/ansible/main.yaml
+++ b/skale-nodes/ansible/main.yaml
@@ -6,3 +6,4 @@
 - import_playbook: link-addresses.yaml
 - import_playbook: register.yaml
 - import_playbook: upload_authorized_keys.yaml
+- import_playbook: ssl.yaml
