Update docker-compose.yml.j2 template

--- a/skale-nodes/ansible/main.yaml
+++ b/skale-nodes/ansible/main.yaml
@@ -1,8 +1,8 @@
-- import_playbook: deploy_contracts.yaml
+# - import_playbook: deploy_contracts.yaml
 - import_playbook: base.yaml
 - import_playbook: setup.yaml
-- import_playbook: validator.yaml
+# - import_playbook: validator.yaml
 - import_playbook: signature.yaml
 - import_playbook: link-addresses.yaml
 - import_playbook: register.yaml
-- import_playbook: upload_authorized_keys.yaml
+# - import_playbook: upload_authorized_keys.yaml
