Update ansible to 4.2.0

--- a/skale-nodes/ansible/roles/base_provision/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/base_provision/tasks/main.yaml
@@ -70,6 +70,14 @@
   tags:
     ssh
 
-- name: Sync time on host
+- name: Enable timedatectl
   shell: sudo timedatectl set-ntp on
   become: true
+  tags: ntp
+
+- name: Enable timesyncd service
+  systemd:
+    name: systemd-timesyncd
+    state: started
+  become: true
+  tags: ntp
