--- a/skale-nodes/ansible/roles/base_provision/tasks/docker.yaml
+++ b/skale-nodes/ansible/roles/base_provision/tasks/docker.yaml
@@ -4,6 +4,7 @@
     state: present
   tags:
     - docker
+
 - name: Add docker repository
   apt_repository:
     repo: deb https://download.docker.com/linux/ubuntu bionic stable
@@ -13,22 +14,4 @@
 
 - name: Update apt and install docker-ce
   apt: update_cache=yes name=docker-ce state=latest
-  tags:
-    - docker
-
-- name: Creating docker daemon config file
-  copy:
-    dest: "/etc/docker/daemon.json"
-    content: |
-      {
-        "live-restore": true
-      }
-  tags:
-    - docker
-
-- name: Reload docker service
-  ansible.builtin.service:
-    name: docker
-    state: reloaded
-  tags:
-    - docker
+  tags: docker
