--- a/skale-nodes/ansible/validator.yaml
+++ b/skale-nodes/ansible/validator.yaml
@@ -1,5 +1,5 @@
 - name: Setup validators
-  hosts: 127.0.0.1
+  hosts: localhost
   connection: local
   tasks:
     - name: Perform validators for nodes generation
