--- a/skale-nodes/ansible/reset.yaml
+++ b/skale-nodes/ansible/reset.yaml
@@ -1,5 +1,5 @@
-- import_playbook: cleanup.yaml
-- import_playbook: setup.yaml
+# - import_playbook: cleanup.yaml
+# - import_playbook: setup.yaml
 - import_playbook: validator.yaml
 - import_playbook: signature.yaml
 - import_playbook: link-addresses.yaml
