--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Calculate version
       run: |
         export BRANCH=${GITHUB_REF##*/}
-        export VERSION=$(cat VERSION)
+        export VERSION=$(cat ./VERSION)
         echo "Branch: $BRANCH"
         echo "Base version: $VERSION"
         export VERSION=$(bash ./helper-scripts/calculate_version.sh)
