--- a/skale-nodes/ansible/main.yaml
+++ b/skale-nodes/ansible/main.yaml
@@ -1,6 +1,7 @@
-# - import_playbook: deploy_contracts.yaml
-# - import_playbook: base.yaml
-# - import_playbook: setup.yaml
+- import_playbook: deploy_contracts.yaml
+- import_playbook: base.yaml
+- import_playbook: sgx_sim.yaml
+- import_playbook: setup.yaml
 - import_playbook: validator.yaml
 - import_playbook: signature.yaml
 - import_playbook: link-addresses.yaml
