--- a/skale-nodes/ansible/reset.yaml
+++ b/skale-nodes/ansible/reset.yaml
@@ -1,4 +1,5 @@
 - import_playbook: cleanup.yaml
+- import_playbook: sgx_sim.yaml
 - import_playbook: setup.yaml
 - import_playbook: validator.yaml
 - import_playbook: signature.yaml
