--- a/skale-nodes/ansible/reset.yaml
+++ b/skale-nodes/ansible/reset.yaml
@@ -3,5 +3,5 @@
 - import_playbook: setup.yaml
 - import_playbook: validator.yaml
 - import_playbook: signature.yaml
-- import_playbook: link-addresses.yaml
+- import_playbook: link_addresses.yaml
 - import_playbook: register.yaml
