Split availability zones

--- a/skale-nodes/ansible/roles/sgx_sim/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/sgx_sim/tasks/main.yaml
@@ -1,17 +1,27 @@
-# - name: Cleanup sgx folder
-#   file:
-#     state: absent
-#     path: "{{ base_path }}/sgx-sim"
-#   tags:
-#     - sgx
-#     - cleanup
-#
-#
-# - name: Create sgx folder
-#   file:
-#     state: directory
-#     path: "{{ base_path }}/sgx-sim"
-#   tags: sgx
+- name: Get sgx container status
+  command:
+    cmd: "docker ps -a --filter name=sgx"
+  register: sgx_status
+  tags: deb
+
+- debug:
+    msg: "{{ sgx_status.stdout_lines }}"
+  tags: deb
+
+- name: Cleanup sgx folder
+  file:
+    state: absent
+    path: "{{ base_path }}/sgx-sim"
+  tags:
+    - sgx
+    - cleanup
+
+
+- name: Create sgx folder
+  file:
+    state: directory
+    path: "{{ base_path }}/sgx-sim"
+  tags: sgx
 
 
 - name: Restart sgx simulator container
@@ -25,6 +35,6 @@
     volumes:
       - "{{ base_path }}/sgx-sim:/usr/src/sdk/sgx_data"
       - "/dev/urandom:/dev/random"
-    command: -s -y
+    command: -s -y -d -V
   tags:
     - container
