--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ skale-nodes/ansible/files/privkey.pem
 
 skale-nodes/ansible/files/node-info/
 skale-nodes/ansible/files/ssh-keys/
+skale-nodes/ansible/files/node-backup/
 skale-nodes/ansible/files/*.json
 
 # other
