--- a/skale-nodes/ansible/roles/sources/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/sources/tasks/main.yaml
@@ -4,7 +4,7 @@
   when: manager_contracts is undefined
 
 - name: Crash if no SM ABIs URL provided
-  fail: 
+  fail:
     msg: manager_contracts is undefined
   when: manager_contracts is undefined
 
@@ -14,7 +14,7 @@
   when: ima_contracts is undefined
 
 - name: Crash if no IMA ABIs URL provided
-  fail: 
+  fail:
     msg: ima_contracts is undefined
   when: ima_contracts is undefined
 
@@ -77,6 +77,11 @@
   # - name: Get block device from lvm-block-device file created by terraform
   #   shell: cat "{{ base_path }}/lvm-block-device"
   #   register: block_device
+
+- name: Set sgx url
+  set_fact:
+    sgx_url: "https://{{ hostvars['sgx0'].ansible_host }}:1026"
+  when: sgx_url is not defined or not sgx_url
 
 - name: Write variables to .env file
   lineinfile:
