--- a/skale-nodes/ansible/sgx.yaml
+++ b/skale-nodes/ansible/sgx.yaml
@@ -1,9 +1,6 @@
-- name: Setup sgx simulator
-  hosts: nodes
+- name: Setup sgx
+  hosts: sgx
   become: true
-  pre_tasks:
-    - set_fact:
-        sgx_simulator: true
   roles:
     - role: sgx
       tags:
