Add node prune to cleanup.yaml

--- a/skale-nodes/ansible/roles/cleanup_nodes/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/cleanup_nodes/tasks/main.yaml
@@ -1,32 +1,4 @@
-- name: Get all container ids
-  command: "docker ps -aq"
-  become: true
-  register: containers_output
-  tags:
-    - cleanup
-
-- name: Split containers ids output
-  register: containers_output
-  set_fact:
-    containers_ids: "{{ containers_output.stdout.split('\n') }}"
-  tags:
-    - cleanup
-
-- name: Destroy all containers
-  become: true
-  docker_container:
-    name: "{{ item }}"
-    state: absent
-    force_kill: yes
-  with_items: "{{ containers_ids | default([]) }}"
-  tags:
-    - cleanup
-
-- name: Remove .skale directory
-  become: true
-  file:
-    path: "{{ base_path }}/.skale"
-    state: absent
-  tags:
-    - cleanup
-    - rm_dotskale
+- import_tasks: containers.yaml
+- import_tasks: node_artifacts.yaml
+- import_tasks: docker_lvmpy.yaml
+- import_tasks: docker.yaml
